--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
-<body class="body-about">
+<body class="body-about-page">
 
 
     <!-- header section -->
